--- a/www/chat2.html
+++ b/www/chat2.html
@@ -360,6 +360,12 @@ const app = createApp({
             this.chatHistoryLastNum = 0;
             this.registrationDialog = true;
         },
+        sessionClosed() {
+            this.MessageToUser = '接続が切れました。ロールの選択からはじめてください。';
+            this.ws = null;
+            this.chatInputLock = false;
+            this.sessionInitialized();
+        },
         submitRegistrationDialog(value) {
             if (this.roleNameDraft !== null) {
                 this.roleNameText = this.roleNameDraft;
@@ -432,10 +438,11 @@ console.log("WS", ret);
                     } else if (ret.msg_type == 'SessionTerminated') {
                         // サーバ側でWSをクローズするためにACKが必要。
                         it.submitEndSessionRequest();
-                        it.MessageToUser = '接続が切れました。ロールの選択からはじめてください。';
-                        it.ws = null;
-                        it.sessionInitialized();
+                        it.sessionClosed();
                     }
+                }
+                this.ws.onclose = function (event) {
+                    it.sessionClosed();
                 }
             });
         },
